--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,35 @@
 <resources>
+    <!-- common -->
     <string name="app_name">comfyflat-mobile</string>
-    <string name="cancel">Cancel</string>
+    <string name="cancel">Отмена</string>
+    <string name="refresh">Refresh</string>
 
     <!--Auth screen-->
     <string name="auth_title">Авторизация</string>
     <string name="invalid_hash">Invalid auth response!</string>
     <string name="auth_error">Unknown error! Try again later</string>
     <string name="custom_auth_menu">Custom server</string>
-    <string name="custom_authorization">Enter your access token</string>
+    <string name="custom_authorization">Сервер</string>
     <string name="server_path">Url:</string>
-    <string name="server_path_hint">https://gitlab.com/</string>
-    <string name="private_token">Token:</string>
-    <string name="private_token_hint">abcdefg1234</string>
-    <string name="login">Login</string>
+    <string name="server_path_hint">ws://www.example.com:55555</string>
+    <string name="login">Войти</string>
     <string name="invalid_server_url">Invalid server path!</string>
     <string name="empty_token">Empty token!</string>
+    <string name="logo_text">comfyflat-mobile</string>
+    <string name="login_text">Логин</string>
+    <string name="password_text">Пароль</string>
+    <string name="submit">Применить</string>
+    <string name="rooms_title">Комнаты</string>
+
+    <!--Zero screen-->
+    <string name="empty_error">Oops!</string>
+    <string name="empty_error_description">Something went wrong.\nPlease try again later.</string>
+    <string name="empty_data">Empty data</string>
+    <string name="empty_data_description">You have not data yet.\nPlease try again later.</string>
+
+    <!--Projects screen-->
+    <string name="projects_title">Projects</string>
+    <string name="my_projects_title">My projects</string>
+    <string name="starred_projects_title">Starred</string>
+    <string name="all_projects_title">All</string>
 </resources>
