Добавил левое меню с выбором пользователя

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="app_name">comfyflat-mobile</string>
     <string name="cancel">Отмена</string>
     <string name="refresh">Refresh</string>
+    <string name="ok">OK</string>
+    <string name="loading">loading…</string>
 
     <!--Auth screen-->
     <string name="auth_title">Авторизация</string>
@@ -32,4 +34,15 @@
     <string name="my_projects_title">My projects</string>
     <string name="starred_projects_title">Starred</string>
     <string name="all_projects_title">All</string>
+
+    <!--Navigation drawer-->
+    <string name="projects_item">Projects</string>
+    <string name="activity_item">Activity</string>
+    <string name="rooms_item">Комнаты</string>
+    <string name="groups_item">Groups</string>
+    <string name="settings_item">Settings</string>
+    <string name="about_item">Помощь</string>
+    <string name="exit">Выйти</string>
+    <string name="logout_question">Выйти?</string>
+    <string name="add_account">Добавить пользователя</string>
 </resources>
