--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,7 @@
     <string name="about_title">About</string>
     <string name="about_info">Информация</string>
     <string name="about_developers">Разработчики</string>
+
+    <!--Room screen-->
+    <string name="room_name_default">Комната</string>
 </resources>
